# Django_Chatbot_API

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  TASKS.md  pyproject.toml
apps/ai/: client.py  exceptions.py  services.py  views.py
apps/conversations/: __init__.py  admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
apps/conversations/migrations/: 0001_initial.py  0002_conversation_user.py
config/: asgi.py  routing.py  settings.py  urls.py
tests/: conftest.py  test_conversations.py
